upload image and retrive through

--- a/AKchat/AKchat.csproj
+++ b/AKchat/AKchat.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Assets\UserProfile\" />
     <Folder Include="Controllers\" />
   </ItemGroup>
 
