--- a/AKchatApp/angular.json
+++ b/AKchatApp/angular.json
@@ -24,10 +24,14 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/emojionearea/dist/emojionearea.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+             
+              "./node_modules/emojionearea/dist/emojionearea.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -93,9 +97,15 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "./node_modules/emojionearea/dist/emojionearea.min.css",
+              
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/emojionearea/dist/emojionearea.min.js",
+              "src/emojionearea.js"
+            ]
           }
         }
       }
