--- a/AKchatApp/package.json
+++ b/AKchatApp/package.json
@@ -26,7 +26,10 @@
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.2.0",
+    "emojionearea": "^3.4.2",
+    "jquery": "^3.7.0",
     "rxjs": "~7.5.0",
+    "save": "^2.9.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -34,6 +37,7 @@
     "@angular-devkit/build-angular": "^14.2.12",
     "@angular/compiler-cli": "^14.2.0",
     "@types/jasmine": "~4.0.0",
+    "@types/jquery": "^3.5.17",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
