--- a/AKchatApp/package.json
+++ b/AKchatApp/package.json
@@ -29,6 +29,7 @@
     "emojionearea": "^3.4.2",
     "jquery": "^3.7.0",
     "ngx-toastr": "^15.2.2",
+    "ng-angular-popup": "^0.4.7",
     "rxjs": "~7.5.0",
     "save": "^2.9.0",
     "tslib": "^2.3.0",
