--- a/AKchatApp/package.json
+++ b/AKchatApp/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^5.2.0",
     "emojionearea": "^3.4.2",
     "jquery": "^3.7.0",
+    "mdb-angular-ui-kit": "^5.0.0",
     "ngx-toastr": "^15.2.2",
     "rxjs": "~7.5.0",
     "save": "^2.9.0",
