--- a/AKchatApp/angular.json
+++ b/AKchatApp/angular.json
@@ -27,7 +27,10 @@
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/emojionearea/dist/emojionearea.min.css",
               "./node_modules/ngx-toastr/toastr.css",
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/font-awesome/css/font-awesome.css"
+
+
             
             ],
             "scripts": [
