--- a/AKchatApp/package.json
+++ b/AKchatApp/package.json
@@ -22,15 +22,16 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@kolkov/angular-editor": "^3.0.0-beta.0",
     "@microsoft/signalr": "^7.0.9",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "@popperjs/core": "^2.10.2",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^5.2.0",
     "emojionearea": "^3.4.2",
     "jquery": "^3.7.0",
     "mdb-angular-ui-kit": "^5.0.0",
     "ngx-toastr": "^15.2.2",
- 
     "rxjs": "~7.5.0",
     "save": "^2.9.0",
     "slick-carousel": "^1.8.1",
