--- a/AKchatApp/package.json
+++ b/AKchatApp/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@auth0/angular-jwt": "^5.2.0",
     "@microsoft/signalr": "^7.0.9",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "@popperjs/core": "^2.10.2",
@@ -30,11 +31,10 @@
     "jquery": "^3.7.0",
     "mdb-angular-ui-kit": "^5.0.0",
     "ngx-toastr": "^15.2.2",
- 
     "rxjs": "~7.5.0",
     "save": "^2.9.0",
     "slick-carousel": "^1.8.1",
-    "tslib": "^2.3.0",
+    "tslib": "^2.6.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
