--- a/AKchatApp/tsconfig.json
+++ b/AKchatApp/tsconfig.json
@@ -30,5 +30,13 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
+  },
+  "paths": {
+    "angular-jwt": [
+      "projects/angular-jwt/src/index"
+    ],
+    "angular-jwt/*": [
+      "projects/angular-jwt/src/*"
+    ]
   }
 }
